--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - run: apt-get install npm hugo git git-lfs
+    - name: Installing build dependencies
+      run: sudo apt-get install npm hugo git git-lfs
+
     - run: npm run build
 
     - name: Deploy
