--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Installing build dependencies
       run: sudo apt-get install npm hugo git git-lfs
+
+    - name: Install npm dependencies
       run: npm install
 
     - run: npm run build
