--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        lfs: true
+    - name: Checkout LFS objects
+        run: git lfs checkout
 
     - name: Installing build dependencies
       run: sudo apt-get install npm hugo git git-lfs
