--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       run: git lfs checkout
 
     - name: Installing build dependencies
-      run: sudo apt-get install npm hugo git git-lfs
+      run: sudo apt-get install npm hugo git
 
     - name: Install npm dependencies
       run: npm install
